[tool.poetry]
name = "pfcrowd"
version = "0.1.0"
description = ""
authors = ["Zachary Weeden <zdw7287@rit.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.0"
selenium = "^3.141.0"
black = "^20.8b1"
"keyrings.alt" = "^4.0.1"
numpy = "^1.19.4"
opencv-python = "^4.4.0"
pytz = "^2020.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
